<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Muzei - Photos album</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <plurals name="items_in_album">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string name="header_currently_set">Currently set</string>
    <string name="btn_authorize">Authorize</string>
    <string name="msg_authorization_request">In order to use photos as wallpapers, please authorize the app to access your albums</string>
    <string name="msg_loading_album">Loading albums, just a second…</string>
    <string name="msg_pick_one_album">One last step, pick one of the albums below as the wallpaper source.</string>

    <string name="dlg_title_switch_account">Switch Google account</string>
    <string name="dlg_msg_switch_account">Are you sure to switch to another Google account? The current account will be logged out.</string>

    <string-array name="pref_themes">
        <item>Light</item>
        <item>Dark</item>
        <item>Set by Battery Saver</item>
    </string-array>
    <string name="pref_choose_theme">Choose theme</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_group_display">Display</string>
    <string name="pref_group_account">Account</string>
    <string name="pref_switch_account">Switch Google account</string>
</resources>
